@@ -1,3 +1,11 @@
+2005/02/26	kaffeetisch
+
+	* t/GtkAccelGroup.t, t/GtkAccelMap.t, t/GtkStock.t: Mark tests as
+	TODO that currently fail due to what appears to be a bug in
+	Test::More.
+
+	* t/PangoLayout.t: Test pango_layout_[sg]et_attributes.
+
 2005/02/19 20:13 (+0100) pcg
 
 	* xs/GdkProperty.xs: document data instead of length as result value.
